cmake_minimum_required(VERSION 3.9)
project(AlgoProblem)

set(CMAKE_CXX_STANDARD 11)

add_executable(2494 boj/2494.cpp)
add_executable(1256 boj/1256.cpp)
add_executable(1023 boj/1023.cpp)
add_executable(2201 boj/2201.cpp)
add_executable(3687 boj/3687.cpp)
add_executable(2468 boj/2468.cpp)
add_executable(1753 boj/1753.cpp)
add_executable(1261 boj/1261.cpp)
add_executable(10473 boj/10473.cpp)
add_executable(15900 boj/15900.cpp)
add_executable(7569 boj/7569.cpp)
add_executable(2573 boj/2573.cpp)
add_executable(9205 boj/9205.cpp)

add_executable(uva_1237 uva/1237.cpp)